# QCalc

./: .gitignore  CMakeLists.txt  LicenseView.qml  QCalc_en_US.ts  QStatistics.cpp  QStatistics.h  README.md  StandardDistribution.cpp  StandardDistribution.h  StandardDistributionInfo.qml  StandardDistributionInput.qml  StandardDistributionPage.qml  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  qml.qrc  qtquickcontrols2.conf
.github/workflows/: android.yml  linux.yml  macos.yml  windows.yml
